--- a/css/style.css
+++ b/css/style.css
@@ -2,14 +2,24 @@ html, body {
   margin: 0 auto;
   padding: 0;
 }
+input::-webkit-inner-spin-button,
+input::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type='number'] {
+    -moz-appearance: textfield;
+}
 body {
   max-width: 1200px;
   width: 100%;
   min-width: 768px;
   font-size: 14px;
   line-height: 21px;
+  text-transform: uppercase;
   color: #333333;
-  font-family: 'PT Sans',sans-serif;
+  font-family: 'PT Sans', Aril, sans-serif;
+  background-color: #f2f2f2;
 }
 h1, .welcome, .because {
   margin: 0;
@@ -17,6 +27,7 @@ h1, .welcome, .because {
 }
 h2 {
   font-size: 21px;
+  font-weight: bold;
   line-height: 26px;
   color: #000000;
 }
@@ -24,12 +35,18 @@ h3 {
   font-size: 21px;
   line-height: 21px;
   color: #000000;
+  font-weight: bold;
 }
 .content {
   margin: 0 auto;
+  outline: 1px solid red;
+  box-shadow: 0 0 10px 0 #000000;
 }
 .main-header, .form, .found, .card-description {
   padding:  0 6%;
+}
+.main-header {
+  background-color: #ffffff;
 }
 .main-navigation ul {
   margin: 0;
@@ -37,43 +54,81 @@ h3 {
   display: flex;
   justify-content: space-between;
   list-style: none;
-  text-align: center;
   font-size: 0;
 }
 .main-navigation li {
   width: 20%;
-  padding: 20px 0;
+  padding: 12px 0;
   font-size: 14px;
-  line-height: 21px;
+  line-height: 26px;
+}
+.main-navigation li:nth-child(-n+2) {
+  text-align: left;
+}
+.main-navigation li:nth-child(n+4) {
+  text-align: right;
 }
 .main-navigation a {
   display: inline-block;
+  color: #000000;
+  font-weight: bold;
+  text-decoration: none;
+}
+.main-navigation a:hover {
+  color: #81b3d2;
+}
+.main-navigation a:active {
+  color: #000000;
+  opacity: 0.3;
+}
+.main-navigation .active {
+  color: #766357;
+}
+.main-navigation .active:hover {
+  color: #604e43;
+}
+.main-navigation .active:active {
+  color: #766357;
+  opacity: 0.3;
 }
 li.logo {
   padding: 0;
   margin: 0;
-  height: 58px;
+  height: 56px;
+  text-align: center;
   z-index: 1000;
 }
 .container {
   display: flex;
   flex-direction: column;
+    background-color: #ffffff;
 }
 .sedona {
-  background: url("../img/white-mask.png") 50% 100% no-repeat,
-              url("../img/mountain-bg.jpg") no-repeat;
-  height: 510px;
+  position: relative;
+  padding-top: 76px;
+  padding-bottom: 80px;
+  background: #cccccc url("../img/mountain-bg.jpg") 0 28% no-repeat;
+  background-size: 100% auto;
   text-align: center;
+}
+.sedona::before {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 57px;
+  content: "";
+  background: url("../img/white-mask.png") 0 0 no-repeat;
+  background-size: 100% 57px;
 }
 .welcome {
   background: url("../img/welcome.png") 50% 0 no-repeat;
   height: 86px;
-  margin: 76px 0 0 0;
 }
 .header-sedona {
   background: url("../img/sedona.png") 50% 0 no-repeat;
   height: 78px;
-  margin: 52px 0 0 0;
+  margin: 50px 0 0 0;
 }
 .because {
   background: url("../img/because.png") 50% 0 no-repeat;
@@ -82,30 +137,171 @@ li.logo {
 }
 .sedona-town {
   margin: 0 auto;
-  width: 450px;
+  width: 575px;
   text-align: center;
-  padding-top: 40px;
+  padding-top: 45px;
+  padding-bottom: 55px;
+}
+.sedona-town h2 {
+  margin-bottom: 30px;
+}
+.sedona-town p {
+  margin-bottom: 0;
 }
 .benefits {
   display: flex;
-  padding-top: 55px;
 }
 .benefits-text {
   width: 33%;
-  padding: 0 45px;
+  padding: 0 40px;
   margin: 0 auto;
   flex-grow: 1;
   text-align: center;
   box-sizing: border-box;
 }
-.benefits:nth-of-type(2n+1) img {
+.benefits-text h3 {
+  max-width: 151px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.benefits:nth-of-type(2n+1) .benefits-text {
+  padding-top: 35px;
+  min-height: 256px;
+}
+.benefits .big-photo {
   width: 66%;
+  flex-grow: 2;
+}
+.benefits .real-city {
+  background: url("../img/real-city.jpg") 50% no-repeat;
+  background-size: cover;
+}
+.benefits .devil-bridge {
+  background: url("../img/devil-bridge.jpg") 50% no-repeat;
+  background-size: cover;
+}
+.benefits:nth-of-type(2) .benefits-text {
+  padding-top: 142px;
+  background-color: #ffffff;
+  padding-bottom: 68px;
+}
+.benefits .house {
+  background: url("../img/house.png") 50% 62px no-repeat;
+}
+.benefits .food {
+  background: url("../img/food.png") 50% 62px no-repeat;
+}
+.benefits .souvenir {
+  background: url("../img/souvenir.png") 50% 58px no-repeat;
+}
+.benefits:nth-of-type(2n+1) {
+  background-color: #81b3d2;
+  color: #ffffff;
+}
+.benefits:nth-of-type(4) {
+  background-color: #eeeeee;
+  padding-top: 27px;
+  padding-bottom: 45px;
+}
+.number {
+  display: block;
+  padding-bottom: 5px;
+}
+.number::before {
+  content: "—";
+  margin-right: 2px;
+}
+.number::after {
+  content: "—";
+  margin-left: 2px;
 }
 .interested {
+  position: relative;
   display: flex;
-  margin-top: 50px;
+  padding-top: 25px;
   flex-direction: column;
+  justify-content: center;
   text-align: center;
+  background-color: #ffffff;
+}
+.interested  h2 {
+  font-size: 30px;
+  margin-bottom: 15px;
+}
+.interested p {
+  line-height: 24px;
+}
+.search-btn {
+  width: 568px;
+  margin: 0 auto;
+  padding: 30px 0;
+  margin-top: 33px;
+  line-height: 26px;
+  color: #ffffff;
+  background-color: #766357;
+}
+.search-btn:hover {
+  cursor: pointer;
+}
+.search {
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 568px;
+  margin-left: -284px;
+  padding: 55px;
+  background-color: #ffffff;
+  color: #000000;
+  line-height: 26px;
+  font-weight: bold;
+  text-align: left;
+  box-sizing: border-box;
+  box-shadow: 0 4px 10px 0 #777777;
+}
+.search label {
+  line-height: 40px;
+  height: 37px;
+}
+.search input {
+  box-sizing: border-box;
+  width: 346px;
+  height: 37px;
+  outline: none;
+  border: none;
+  background-color: #f2f2f2;
+  margin-bottom: 29px;
+  text-transform: uppercase;
+}
+.search input:last-of-type {
+  margin: 0;
+}
+.search input[type="text"]{
+  padding: 0px 30px 0 12px;
+  background: #f2f2f2 url("../img/calendar.png") 97% 50% no-repeat;
+}
+.search input[type="number"] {
+  margin-left: 2px;
+  padding: 0 30px;
+  width: 114px;
+  height: 38px;
+  text-align: center;
+}
+.search input[type="submit"] {
+  width: 100%;
+  color: #ffffff;
+  text-transform: uppercase;
+  background-color: #81b3d2;
+  height: 57px;
+}
+.search input[type="submit"]:hover {
+  background-color: #669ec0;
+}
+.search input[type="submit"]:active {
+  background-color: #5496bd;
+  color: rgba(0,0,0,0.3);
 }
 .main-footer {
   display: flex;
@@ -125,22 +321,51 @@ li.logo {
   margin-top: 35px;
   margin-bottom: 35px;
 }
+.visit p {
+  font-size: 21px;
+  line-height: 26px;
+  font-weight: bold;
+}
+.social-btn {
+  font-size: 0;
+  display: inline-block;
+  width: 47px;
+  height: 46px;
+  background: #81b3d2;
+}
+.social-btn:hover {
+  background-color: #669ec0;
+}
+.social-btn:active {
+  background-color: #5496bd;
+}
 .footer-copyright {
 display: flex;
 justify-content: center;
 }
 .footer-copyright p {
-  margin-right: 15px;
+  padding-right: 121px;
+  line-height: 26px;
 }
-.form {
+.footer-copyright a {
+  text-decoration: none;
+  color: #000000;
+  background: url("../img/sprite-html-academy.png") 77px 5px no-repeat;
+}
+.footer-copyright a:hover {
+  background-position: 77px -44px;
+}
+.footer-copyright a:active {
+  background-position: 77px -93px;
+}
+.form-hotels {
   background: url("../img/degradation-bg.jpg") no-repeat;
   height: 217px;
 }
-.form form {
+.form-hotels form {
   display: flex;
   justify-content: space-between;
 }
-.
 .housing {
   flex-grow: 2;
   padding-left: 10px;
