--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,6 @@ h3 {
 }
 .content {
   margin: 0 auto;
-  outline: 1px solid red;
   box-shadow: 0 0 10px 0 #000000;
 }
 .main-header, .form, .found, .card-description {
@@ -270,17 +269,16 @@ li.logo {
   width: 346px;
   height: 37px;
   outline: none;
-  border: none;
+  border: 2px solid #f2f2f2;
   background-color: #f2f2f2;
   margin-bottom: 29px;
   text-transform: uppercase;
 }
-.search input:last-of-type {
-  margin: 0;
-}
-.search input[type="text"]{
-  padding: 0px 30px 0 12px;
-  background: #f2f2f2 url("../img/calendar.png") 97% 50% no-repeat;
+.search input[type="text"] {
+  padding: 0px 30px 0 15px;
+  background-image: url("../img/sprite-calendar.png");
+  background-position: 97.5% 5px;
+  background-repeat: no-repeat;
 }
 .search input[type="number"] {
   margin-left: 2px;
@@ -289,17 +287,87 @@ li.logo {
   height: 38px;
   text-align: center;
 }
+.search .count-of-people {
+  position: relative;
+}
+.number-minus {
+  position: absolute;
+  top: 0px;
+  left: 2px;
+  height: 38px;
+  width: 30px;
+  outline: 1px solid red;
+}
+.number-plus {
+  position: absolute;
+  top: 0;
+  right: 4px;
+  height: 38px;
+  width: 30px;
+}
+.number-minus::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -2px;
+  height: 3px;
+  width: 12px;
+  background: #a9a9a9;
+}
+.number-plus::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 50%;
+  margin-top: -2px;
+  height: 3px;
+  width: 12px;
+  background-color: #a9a9a9;
+}
+.number-plus::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 50%;
+  margin-top: -2px;
+  height: 3px;
+  width: 12px;
+  background-color: #a9a9a9;
+  transform: rotate(90deg);
+}
+.number-minus:hover ~ .number-minus::after {
+  background-color: #000000;
+}
 .search input[type="submit"] {
+  border: none;
+  margin: 0;
   width: 100%;
   color: #ffffff;
   text-transform: uppercase;
   background-color: #81b3d2;
   height: 57px;
 }
+.search input:hover {
+  border: 2px solid #ebebeb;
+  background-color: #ebebeb;
+}
+.search input:active {
+  background-color: #ffffff;
+  border: 2px solid #e5e5e5;
+}
+.search input[type="text"]:hover {
+  background-position: 97.5% -42px;
+}
+.search input[type="text"]:active {
+  background-position: 97.5% -86px;
+}
 .search input[type="submit"]:hover {
+  border: none;
   background-color: #669ec0;
 }
 .search input[type="submit"]:active {
+  border: none;
   background-color: #5496bd;
   color: rgba(0,0,0,0.3);
 }
@@ -331,13 +399,31 @@ li.logo {
   display: inline-block;
   width: 47px;
   height: 46px;
-  background: #81b3d2;
+  background: #81b3d2 url("../img/sprite-soc.png")  no-repeat;
 }
 .social-btn:hover {
   background-color: #669ec0;
 }
 .social-btn:active {
   background-color: #5496bd;
+}
+.social-btn-tw {
+  background-position: -5px -178px;
+}
+.social-btn-tw:active {
+  background-position: -5px -123px;
+}
+.social-btn-fb {
+  background-position: -3px -67px;
+}
+.social-btn-fb:active {
+  background-position: -3px -8px;
+}
+.social-btn-yt {
+  background-position: -7px -233px;
+}
+.social-btn-yt:active {
+  background-position: -7px -289px;
 }
 .footer-copyright {
 display: flex;
@@ -359,12 +445,36 @@ justify-content: center;
   background-position: 77px -93px;
 }
 .form-hotels {
+  padding: 0 6%;
   background: url("../img/degradation-bg.jpg") no-repeat;
-  height: 217px;
+  color: #ffffff;
 }
 .form-hotels form {
   display: flex;
   justify-content: space-between;
+}
+.form-hotels h2 {
+  font-size: 16px;
+  line-height: 21px;
+  color: #ffffff;
+  margin-bottom: 35px;
+  margin-top: 35px;
+}
+.infrastructure,
+.housing,
+.price {
+  display: flex;
+  flex-direction: column;
+}
+.infrastructure {
+  margin-right: 130px;
+}
+.infrastructure div,
+.housing div {
+  margin-bottom: 17px;
+}
+.infrastructure div:last-of-type {
+  margin-bottom: 42px;
 }
 .housing {
   flex-grow: 2;
