--- a/css/style.css
+++ b/css/style.css
@@ -452,7 +452,7 @@ justify-content: center;
   flex-direction: column;
 }
 .infrastructure {
-  margin-right: 130px;
+  margin-right: 7%;
 }
 .infrastructure div,
 .housing div {
