Доработка главного меню и Фильтра на внутренней странице

--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,8 @@ h3 {
   font-size: 0;
 }
 .main-navigation li {
-  width: 20%;
+  flex-basis: 20%;
+  flex-grow: 1;
   padding: 15px 0;
   font-size: 14px;
   line-height: 26px;
@@ -461,7 +462,7 @@ justify-content: center;
   flex-direction: column;
 }
 .infrastructure {
-  margin-right: 7%;
+  margin-right: 11%;
 }
 .infrastructure div,
 .housing div {
@@ -495,7 +496,6 @@ input[type="checkbox"]:checked + label::before {
 }
 .housing {
   flex-grow: 2;
-  padding-left: 10px;
 }
 .selecting-price {
   position: relative;
