--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ li.logo {
   width: 138px;
   height: 70px;
   text-align: center;
-  z-index: 1000;
+  z-index: 10;
 }
 .container {
   display: flex;
@@ -156,6 +156,7 @@ li.logo {
 }
 .benefits {
   display: flex;
+  z-index: 100;
 }
 .benefits-text {
   width: 33%;
@@ -240,11 +241,14 @@ li.logo {
 .interested {
   position: relative;
   display: flex;
-  padding-top: 25px;
   flex-direction: column;
   justify-content: center;
   text-align: center;
+}
+.interested .wrapper {
   background-color: #ffffff;
+  padding-top: 25px;
+  z-index: 100;
 }
 .interested  h2 {
   font-size: 30px;
@@ -261,7 +265,6 @@ li.logo {
   line-height: 26px;
   color: #ffffff;
   background-color: #766357;
-  z-index: 1000;
 }
 .search-btn:hover {
   cursor: pointer;
@@ -283,7 +286,7 @@ li.logo {
   text-align: left;
   box-sizing: border-box;
   box-shadow: 0 0 15px 0 rgba(0,0,0,0.6);
-  z-index: 100;
+  z-index: 10;
 }
 .selected-date {
   position: relative;
@@ -810,4 +813,23 @@ a.arrow-active {
   padding: 4px 12px 3px 16px;
   color: #666666;
   background-color: #f2f2f2;
+}
+/* Оживление формы */
+.hidden {
+  display: none;
+}
+@keyframes show {
+  0% {
+    transform: translateY(-366px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+.search-show {
+  display: flex;
+  animation-name: show;
+  animation-duration: 1.5s;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease-out;
 }
