--- a/css/style.css
+++ b/css/style.css
@@ -52,14 +52,21 @@ h3 {
   position: relative;
   margin: 0;
   padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   list-style: none;
   font-size: 0;
 }
 .main-navigation li {
-  flex-basis: 20%;
-  flex-grow: 1;
+  -ms-flex-preferred-size: 20%;
+      flex-basis: 20%;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   padding: 15px 0;
   font-size: 14px;
   line-height: 26px;
@@ -105,8 +112,13 @@ li.logo {
   z-index: 10;
 }
 .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
     background-color: #ffffff;
 }
 .sedona {
@@ -155,6 +167,8 @@ li.logo {
   margin-bottom: 0;
 }
 .benefits {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   z-index: 100;
 }
@@ -162,7 +176,9 @@ li.logo {
   width: 33%;
   padding: 0 40px;
   margin: 0 auto;
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   text-align: center;
   box-sizing: border-box;
 }
@@ -178,7 +194,9 @@ li.logo {
 }
 .benefits .big-photo {
   width: 66%;
-  flex-grow: 2;
+  -webkit-box-flex: 2;
+      -ms-flex-positive: 2;
+          flex-grow: 2;
 }
 .benefits .real-city {
   background: url("../img/real-city.jpg") 50% no-repeat;
@@ -240,9 +258,16 @@ li.logo {
 }
 .interested {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   text-align: center;
 }
 .interested .wrapper {
@@ -273,9 +298,14 @@ li.logo {
   position: absolute;
   top: 100%;
   left: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   width: 568px;
   margin-left: -284px;
   padding: 55px;
@@ -290,8 +320,12 @@ li.logo {
 }
 .selected-date {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 100%;
 }
 .search label {
@@ -399,9 +433,15 @@ li.logo {
   background: #eee url("../img/map.jpg");
 }
 .main-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
   padding: 0;
   height: 120px;
@@ -414,7 +454,8 @@ li.logo {
 }
 .main-footer section {
   text-align: center;
-  flex-basis: 33.3%;
+  -ms-flex-preferred-size: 33.3%;
+      flex-basis: 33.3%;
 
 }
 .visit p {
@@ -454,8 +495,12 @@ li.logo {
   background-position: -206px -269px;
 }
 .footer-copyright {
+display: -webkit-box;
+display: -ms-flexbox;
 display: flex;
-justify-content: center;
+-webkit-box-pack: center;
+    -ms-flex-pack: center;
+        justify-content: center;
 }
 .footer-copyright .btn {
   text-decoration: none;
@@ -489,8 +534,12 @@ justify-content: center;
   color: #ffffff;
 }
 .form-hotels form {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin-bottom: 19px;
 }
 .form-hotels h2 {
@@ -506,8 +555,13 @@ justify-content: center;
 .infrastructure,
 .housing,
 .price {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 .infrastructure {
   margin-right: 11%;
@@ -552,7 +606,9 @@ input[type="checkbox"]:disabled + label::before {
   background-position: -154px -211px;
 }
 .housing {
-  flex-grow: 2;
+  -webkit-box-flex: 2;
+      -ms-flex-positive: 2;
+          flex-grow: 2;
 }
 .selecting-price {
   position: relative;
@@ -570,7 +626,8 @@ input[type="checkbox"]:disabled + label::before {
   width: 2px;
   height: 22px;
   background: #ffffff;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 .selecting-price label {
   display: inline-block;
@@ -641,15 +698,25 @@ input[type="checkbox"]:disabled + label::before {
   cursor: pointer;
 }
 .found {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding-top: 9px;
   padding-bottom: 10px;
 }
 .found-column-left {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .found-number {
   font-size: 21px;
@@ -663,6 +730,8 @@ input[type="checkbox"]:disabled + label::before {
   margin-right: 40px;
 }
 .found-column-left .menu-sort {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin: 0;
   padding: 0;
@@ -722,8 +791,12 @@ a.arrow-active {
   background-position: -132px -168px;
 }
 .card-description {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding-top: 30px;
   padding-bottom: 30px;
   border-bottom: 1px solid #e5e5e5;
@@ -732,6 +805,8 @@ a.arrow-active {
   border-top: 1px solid #e5e5e5;
 }
 .card-hotel {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 .card-hotel img {
@@ -750,6 +825,8 @@ a.arrow-active {
   opacity: 0.3;
 }
 .desc-bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 .desc-bottom p {
@@ -818,18 +895,36 @@ a.arrow-active {
 .hidden {
   display: none;
 }
-@keyframes show {
+@-webkit-keyframes show {
   0% {
-    transform: translateY(-366px);
+    -webkit-transform: translateY(-366px);
+            transform: translateY(-366px);
   }
   100% {
-    transform: translateY(0px);
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+}
+@keyframes show {
+  0% {
+    -webkit-transform: translateY(-366px);
+            transform: translateY(-366px);
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
   }
 }
 .search-show {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  animation-name: show;
-  animation-duration: 1.5s;
-  animation-fill-mode: forwards;
-  animation-timing-function: ease-out;
+  -webkit-animation-name: show;
+          animation-name: show;
+  -webkit-animation-duration: 1.5s;
+          animation-duration: 1.5s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  -webkit-animation-timing-function: ease-out;
+          animation-timing-function: ease-out;
 }
