маленькие корректировки css

--- a/css/style.css
+++ b/css/style.css
@@ -332,11 +332,11 @@ li.logo {
   line-height: 40px;
   height: 37px;
 }
+
 .calendar {
   position: absolute;
   top: 6px;
   right: 9px;
-  content: "";
   width: 21px;
   height: 21px;
   background-image: url("../img/sprite.png");
@@ -581,7 +581,8 @@ input[type="checkbox"] + label {
 input[type="checkbox"] + label::before {
   content: "";
   position: absolute;
-  top: 0;
+  top: 50%;
+  margin-top: -11px;
   left: 0;
   width: 24px;
   height: 22px;
@@ -590,7 +591,8 @@ input[type="checkbox"] + label::before {
 input[type="checkbox"]:checked + label::before {
   content: "";
   position: absolute;
-  top: 0;
+  top: 50%;
+  margin-top: -11px;
   left: 0;
   width: 24px;
   height: 22px;
@@ -599,7 +601,8 @@ input[type="checkbox"]:checked + label::before {
 input[type="checkbox"]:disabled + label::before {
   content: "";
   position: absolute;
-  top: 0;
+  top: 50%;
+  margin-top: -11px;
   left: 0;
   width: 24px;
   height: 22px;
@@ -644,6 +647,7 @@ input[type="checkbox"]:disabled + label::before {
 .selecting-price input {
   width: 50px;
   margin: 0;
+  min-height: 20px;
   color: inherit;
   font: inherit;
   background: none;
