--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
   line-height: 21px;
   text-transform: uppercase;
   color: #333333;
-  font-family: 'PT Sans', Aril, sans-serif;
+  font-family: 'PT Sans', Arial, sans-serif;
   background-color: #f2f2f2;
 }
 h1, .welcome, .because {
