--- a/css/style.css
+++ b/css/style.css
@@ -175,9 +175,16 @@ li.logo {
   z-index: 100;
 }
 .benefits-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 33%;
   padding: 0 40px;
   margin: 0 auto;
@@ -342,7 +349,8 @@ li.logo {
   width: 100%;
 }
 .search label {
-  align-self: center;
+  -ms-flex-item-align: center;
+      align-self: center;
 }
 
 .calendar {
@@ -648,7 +656,6 @@ input[type="checkbox"]:disabled + label::before {
 .selecting-price label {
   display: inline-block;
   vertical-align: top;
-  line-height: 30px;
   font-size: 14px;
   padding-top: 6px;
   cursor: pointer;
@@ -792,7 +799,8 @@ input[type="checkbox"]:disabled + label::before {
   font-size: 0;
 }
 a.sorting-decrease {
-  transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
 }
 a[class^="sorting-"]:hover {
   border-bottom: 10px solid #000000;
